# man-ecommerce-be

./: .env  .gitignore  Dockerfile  README.md  bunjang.xlsx  db-compose.yml  docker-compose.yml  ecommerce.db  es-compose.yml  kafka-compose.yml  main.py  next_line.py  pyproject.toml  run.sh  settings.json  setup.sh  temp_crawl_file.xlsx  인터프리터잡는법.txt
alembic/: env.py
app/: dependencies.py  ecommerce.db  insert_main.py  main.py
app/api/v1/: __init__.py  api.py  schemas.py
app/api/v1/endpoints/: auth.py  crawl.py  index.py  items.py  search.py  test.py  users.py
app/config/: items_mapping.json
app/core/: config.py  logging_config.py  security.py
app/db/: database.py  init_db.py  session.py
app/models/: item.py  user.py
app/schema/: schemas.py  search.py
app/schemas/: user.py
app/services/: auth.py  crawl_service.py  crawl_services.py  es_client.py  es_service.py  item_service.py  kafka_service.py  render.py  search_service.py  search_services.py  service_container.py  test_service.py  user_service.py
app/sql/: create_table.sql  script.md  user_queries.py
app/tests/: test_users.py
app/utils/: email.py  file_util.py  security.py  string_util.py  time_util.py
tests/: test_items.py  test_search_services.py
