[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = "An e-commerce backend using FastAPI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.22"
pydantic = "^1.8.2"
alembic = "^1.6.5"
python-jose = "^3.2.0"
passlib = "^1.7.4"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
